ECA-11266: Configurable max jobs for publish worker
Added a value to the UI for the publish queue worker that makes the
numbers of entries published per run configurable from the default of
20000.